<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search Widget -->
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView"/>
    
 
    
     <!-- chapters -->
    <item android:id="@+id/action_read"
          android:icon="@drawable/ic_action_read"
          android:title="@string/menu_read" 
          android:showAsAction="always" />
    
    <!-- chapters -->
    <item android:id="@+id/action_semi_chapters"
          android:icon="@drawable/ic_action_semi_chapter"
          android:title="@string/menu_semi" 
          android:showAsAction="always" />
    
   
    
      <!-- semi chapters -->
    <item android:id="@+id/fav"
          android:icon="@drawable/ic_action_favorite"
          android:title="@string/fav"
          android:showAsAction="never" />
        <item
        android:id="@+id/action_settings"
      android:icon="@drawable/ic_action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
        <!-- semi chapters -->
    <item android:id="@+id/exit"
          android:icon="@drawable/exit"
          android:title="@string/exit"
             android:orderInCategory="100"
          android:showAsAction="never" />
    
    
</menu>
