<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/text_bg_color_ind"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/list_background_pressed2" >

    <RelativeLayout
        android:id="@+id/ly_font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/sb_font_size"
            style="@style/SeekBarcomponent_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:max="39"
            android:progress="18" />

        <TextView
            android:id="@+id/text_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_font_size"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

  

    

    <View
        android:id="@+id/hr2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ly_font_size"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />

    <RelativeLayout
        android:id="@+id/ly_text_font_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hr2"
        android:background="@drawable/list_selector3" >

        <TextView
            android:id="@+id/Text_color_font_ind"
            android:layout_width="10dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/main_theme_color"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/Text_color_font_ind"
            android:gravity="center_vertical|center_horizontal"
           
              android:text="@string/hadith_font_color"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:id="@+id/hr3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ly_text_font_color"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />

    <RelativeLayout
        android:id="@+id/ly_text_bg_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/hr3"
        android:background="@drawable/list_selector3" >

        <TextView
            android:id="@+id/Text_color_bg_ind"
            android:layout_width="10dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/main_theme_color"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Text_color_bg_ind"
            android:gravity="center_vertical|center_horizontal"
           
            android:text="@string/hadith_bg_color"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:id="@+id/hr14"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ly_text_bg_color"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />
<RelativeLayout
     android:id="@+id/ly_hide_bg"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_below="@id/hr14"
     android:background="@drawable/list_selector3"
     android:paddingBottom="10dp"
     android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/cb_hide_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentRight="true" 
            android:src="@drawable/component_style_btn_check_on_focused_holo_dark" />

        <TextView
            android:id="@+id/Text_hide_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cb_hide_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/hide_bg"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>
       <View
        android:id="@+id/hr4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ly_hide_bg"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />
 <RelativeLayout
     android:id="@+id/ly_low_light_color"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_below="@id/hr4"
     android:background="@drawable/list_selector3"
     android:paddingBottom="10dp"
     android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/cb_low_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentRight="true" 
            android:src="@drawable/component_style_btn_check_on_focused_holo_dark" />

        <TextView
            android:id="@+id/Text_low_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cb_low_light"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/low_light"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>
      
    <View
        android:id="@+id/hr5"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ly_low_light_color"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />  

 <RelativeLayout
     android:id="@+id/ly_all_settings"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_below="@id/hr5"
     android:background="@drawable/list_selector3"
     android:paddingBottom="10dp"
     android:paddingTop="10dp" >

        <TextView
       
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/all_settings"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>